<resources>
    <string name="app_name">Vartalap</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="no_users_found">No Users Found</string>
    <string name="type_a_message">type a message…</string>
    <string name="online">online</string>

</resources>