<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.vartalap.screens.signInPage.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.23000002">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/welcome_back"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/login_to_continue"
                android:textColor="@color/secondary_text"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="24sp"
                android:layout_marginTop="40dp"
                android:background="@drawable/background_input"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@={viewModel.email}"
                android:textColor="@color/primary_text"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="24sp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_input"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@={viewModel.password}"
                android:textColor="@color/primary_text"
                android:textSize="13sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="20dp"
                android:animateLayoutChanges="true">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="@{viewModel.isSigningIn ? View.VISIBLE : View.GONE}"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="24sp"
                    android:onClick="@{() -> viewModel.onSignInButtonClick()}"
                    android:visibility="@{viewModel.isSigningIn() ? View.INVISIBLE : View.VISIBLE}"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    app:cornerRadius="8dp" />

            </FrameLayout>

            <TextView
                android:id="@+id/create_new_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/create_new_account"
                android:textColor="@color/primary"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>