<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.example.vartalap.screens.signUpPage.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.23000002">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/create_new_account"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/image_picker"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/input_background"
                app:cardCornerRadius="40dp"
                app:cardElevation="0dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/input_background">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_baseline_add_a_photo_24" />

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />

                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="24sp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_input"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@={viewModel.name}"
                android:textColor="@color/primary_text"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="24sp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_input"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@={viewModel.email}"
                android:textColor="@color/primary_text"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="24sp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_input"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@={viewModel.password}"
                android:textColor="@color/primary_text"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/input_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="24sp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_input"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@={viewModel.confirmPassword}"
                android:textColor="@color/primary_text"
                android:textSize="13sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="20dp"
                android:animateLayoutChanges="true">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="@{viewModel.isSigningUp ? View.VISIBLE : View.GONE}"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="24sp"
                    android:onClick="@{() -> viewModel.onSignUpButtonClick()}"
                    android:visibility="@{viewModel.isSigningUp() ? View.INVISIBLE : View.VISIBLE}"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    app:cornerRadius="8dp" />

            </FrameLayout>

            <TextView
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/sign_in"
                android:textColor="@color/primary"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>